<?xml version="1.0"?>
<package format="2">
  <name>serbot_msgs</name>
  <version>1.0.0</version>
  <description>
    Message and service types: custom messages and services for Serbot packages
  </description>
  <license>Apache 2.0</license>
  <maintainer email="soohyun0907@naver.com">SooHyun</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
